[project]
name = "mustage-aiogram-test"
version = "0.1.0"
description = ""
authors = [
    {name = "lionex-ui",email = "eugenemescaline@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "flake8-bugbear (>=24.12.12,<25.0.0)",
    "flake8-comprehensions (>=3.16.0,<4.0.0)",
    "flake8-import-order (>=0.18.2,<0.19.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 120
